<resources>
    <string name="app_name">common</string>
    <string name="voice_list_add_file_tittle">点击此处新建项目</string>
    <string name="voice_list_add_file">创建</string>

    <string name="voice_list_file_list">文件</string>
    <string name="voice_file_create_tittle">新建语音倒放项目</string>
    <string name="voice_file_create_input_name">输入项目名称</string>
    <string name="voice_file_error_file_name_null">输入项目名不能为空！</string>
    <string name="voice_file_error_file_create_fail">创建项目失败，请确保程序拥有存储权限！</string>
    <string name="voice_file_error_file_exit">创建失败，项目已存在，请修改项目名</string>
    <string name="voice_file_error_sdcard_null">创建失败，读取存储权限失败</string>

    <string name="dialog_negative_btn">取消</string>
    <string name="dialog_positive_btn">确认</string>
    <string name="dialog_create_time">创建时间</string>
    <string name="dialog_voice_user_guide_tittle">用户须知</string>
    <string name="dialog_voice_user_guide_message">-每次录音需要消耗%d积分\n-保存录音需要消耗%d积分\n-积分可通过积分页面获得\n-祝您游戏愉快</string>

    <string name="activity_main_voice_reverse">语音倒放挑战</string>
    <string name="activity_main_voice_reverse_us">voice reverse challenge</string>
    <string name="activity_main_navigation_game">游戏</string>
    <string name="activity_main_navigation_coin">积分</string>

    <string name="activity_voice_navigation_challenge">玩耍</string>
    <string name="activity_voice_navigation_record">记录</string>
    <string name="activity_voice_tittle_challenge">语音倒放挑战</string>
    <string name="activity_voice_tittle_record">历史记录</string>
    <string name="activity_voice_create_file">创建项目</string>

    <string name="fragment_voice_author">创作者</string>
    <string name="fragment_voice_challenger">挑战者</string>
    <string name="fragment_voice_author_reverse">倒放</string>
    <string name="fragment_voice_author_finish">完成</string>
    <string name="fragment_voice_author_record_play">播放</string>
    <string name="fragment_voice_author_stop">停止</string>
    <string name="fragment_voice_author_play">录音</string>
    <string name="fragment_play_default_time">00:00</string>
    <string name="fragment_voice_author_prepare">点击屏幕开始游戏</string>
    <string name="fragment_voice_challenger_question">听题</string>
    <string name="fragment_voice_challenge_answer">答案</string>
    <string name="fragment_voice_challenge_save">保存</string>

    <string name="toast_please_stop_recording">当前正在录音，请录音结束再进行其他操作</string>
    <string name="toast_please_stop_play">正在播放，请稍后</string>

    <string name="credit_get">获取%1$d~%2$d积分</string>

    <string name="credit_limit">积分不足，请先获取积分</string>
    <string name="credit_delete_record_success">删除录音成功！</string>

    <string name="app_version">%1$s %2$s %3$s</string>
    <string name="app_right">Copyright @ 2020 VoiceReverse2020 All right Reserved</string>

    <string name="fragment_drawer_five_star">给我们打分</string>

    <string name="activity_tittle_privacy">隐私政策</string>

    <string name="toast_record_error">很抱歉，录音出错了，请联系我们反馈！</string>
    <string name="toast_create_parent_file_error">创建软件根文件夹失败！</string>

    <string name="fragment_drawer_ad">每日福利</string>
    <string name="tbk_ad_rest_coupon">剩余优惠券：%1$d/%2$d</string>
    <string name="tbk_ad_btn_save">省￥%s</string>

    <string name="tbk_ad_detail_title">宝贝详细信息</string>

    <string name="tbk_ad_taokouling_message">限时福利！低价开抢！</string>
    <string name="tbk_ad_taokouling_null">抱歉！暂无优惠券！</string>
    <string name="tbk_ad_taokouling_data">淘口令：%s</string>
    <string name="tbk_ad_taokouling_copy_success">复制淘口令成功！到手机淘宝即可查看！</string>
</resources>
