<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/voice_file_create_tittle"/>

        <EditText
            android:id="@+id/et_voice_file_create_file_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/voice_file_create_input_name"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_voice_file_create_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:text="创建时间"/>

        <TextView
            android:id="@+id/tv_voice_file_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            tools:text="输入名称不能为空！"
            android:textColor="@color/color_D92524"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/tv_voice_file_cancel"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/dialog_negative_btn"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:backgroundTint="@color/colorPrimaryDark"/>
            <Button
                android:id="@+id/tv_voice_file_ok"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dialog_positive_btn"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/colorPrimaryDark"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
