<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.zhenye.voicereverse.VoiceFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_voice_file_create_add">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_A6A0C6"
            android:textSize="12dp"
            android:text="@string/voice_list_add_file"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color_A6A0C6"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_voice_file_create_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:elevation="5dp"
        android:gravity="center_vertical"
        android:background="@drawable/ripple_add_voice_file"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:src="@mipmap/ic_add_file"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/voice_list_add_file_tittle"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@mipmap/ic_page_in"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_voice_file_create_add"
        app:layout_constraintBottom_toTopOf="@id/rv_voice_file_create_recycler_view">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_A6A0C6"
            android:textSize="12dp"
            android:text="@string/voice_list_file_list"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color_A6A0C6"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_voice_file_create_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/ll_voice_file_create_add"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="9"
        tools:listitem="@layout/item_voice_file"/>

</androidx.constraintlayout.widget.ConstraintLayout>
